--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "homepage": "https://github.com/AndresMorelos/PreIcfes-Fundapar#readme",
   "devDependencies": {
     "@types/jquery": "^3.2.17",
+    "@types/node": "^8.5.2",
     "lite-server": "^2.2.2"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
-    "popper.js": "^1.12.9",
+    "parallax-js": "^3.1.0",
     "systemjs": "^0.20.19"
   }
 }
